<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_outline_logout_24"/>
    <item
        android:id="@+id/inventory"
        android:title="@string/menu_inventory"
        android:icon="@drawable/ic_outline_inventory_24"/>
    <item
        android:id="@+id/add_item"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_outline_add_box_24"/>
    <item
        android:id="@+id/add_test_data"
        android:title="@string/test_data"
        android:icon="@drawable/ic_outline_library_add_24"/>
    <item
        android:id="@+id/delete_items"
        android:title="@string/delete_items"
        android:icon="@drawable/ic_outline_delete_forever_24"/>

</menu>